--- a/02/02.css
+++ b/02/02.css
@@ -1,54 +1,115 @@
-/* 전체 선택자 */
 * {
-  padding: 0px;
-  margin: 0px;
+    margin: 0px;
+    padding: 0px;
+    font-family: "Hi Melody", system-ui;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 20px;
 }
 
-/* 조상 자손 선택자 */
-header ul {
-  background-color: green;
-  color : white ;
+body {
+    width: 80%;
+    margin-left: 10%;
 }
 
-/* 부모 자식 선택자 */
-footer > ul {
-  background-color: black;
-  color: white;
+header,
+main {
+    background-color: aliceblue;
+    box-sizing: border-box;
+    padding: 10px;
 }
 
-/* 속성선택자 */
-h2[class] {
-  color : yellow ;
+ul {
+    list-style: none;
 }
 
-/* 클래스선택자 */
-.g1 {
-  /* 배경색과 글자색 */
-  background-color: blue;
-  color : white;
-
-  /* 가로와 세로 */
-  width: 50%;
-  height: 80px;
-
-  /* 안쪽여백 */
-  padding: 20px;
-  /* 바깥여백 */
-  margin : 20px;
+header {
+    justify-content: space-between;
+    padding: 20px;
 }
 
-.g2 {
-  background-color: red;
-  color : white;
+nav {
+    display: flex;
+    justify-content: center;
 }
 
-/* 아이디 선택자 */
-#html {
-  background-color: blueviolet;
-  color : white;
+nav>ul {
+    display: flex;
 }
 
-/* 그룹 */
-#s1 , #s2 {
-  background-color: gainsboro;
+nav li {
+    padding: 5px;
+    margin: 2px;
+}
+
+article {
+    padding-top: 50px;
+    padding-bottom: 30px;
+}
+
+article>h1 {
+    display: flex;
+    justify-content: center;
+    font-size: 50px;
+}
+
+article>p {
+    padding: 30px 50px;
+}
+
+
+a {
+    text-decoration: none;
+    color: black;
+    padding: 10px 10px;
+    border-radius: 5px;
+    text-decoration: none;
+}
+
+#menu1 a {
+    background-color: black;
+    color: white;
+}
+
+#menu1 a:hover {
+    background-color: grey;
+}
+
+.textred {
+    color: red;
+}
+
+section {
+    margin: 20px;
+    padding: 20px;
+    border-radius: 30px;
+    background-color: white;
+}
+
+section>h2 {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.fbox {
+    display: flex;
+    align-items: center;
+}
+
+section img {
+    border-radius: 50%;
+    margin: 0 40px;
+}
+
+footer {
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: center;
+    padding: 20px 0;
+}
+
+footer li {
+    display: flex;
+    justify-content: center;
 }
