--- a/02/02.css
+++ b/02/02.css
@@ -2,9 +2,6 @@
     margin: 0px;
     padding: 0px;
     font-family: "Hi Melody", system-ui;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 20px;
 }
 
 body {
@@ -57,7 +54,6 @@ article>p {
     padding: 30px 50px;
 }
 
-
 a {
     text-decoration: none;
     color: black;
@@ -104,12 +100,12 @@ section img {
 footer {
     background-color: black;
     color: white;
-    display: flex;
-    justify-content: center;
     padding: 20px 0;
 }
 
-footer li {
+footer>ul {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    font-size: small;
 }
