--- a/02/02.css
+++ b/02/02.css
@@ -108,3 +108,10 @@ footer>ul {
     align-items: center;
     font-size: small;
 }
+
+@media screen and (max-width: 1024px) {
+    body {
+        width: 100%;
+        margin-left: 0;
+    }
+}
