--- a/04/04.css
+++ b/04/04.css
@@ -1,11 +1,14 @@
-form {
+form,
+main>div {
     width: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.fInput, .fButton {
+
+.fInput,
+.fButton {
     width: 100%;
     height: 60px;
     background-color: aliceblue;
@@ -14,13 +17,18 @@ form {
     align-items: center;
 }
 
-.fInput input{
+.fInput input {
     width: 46%;
     height: 40px;
     padding: 10px;
     font-size: large;
 }
+
 .fButton button {
     width: 30%;
     height: 40px;
+}
+
+[readonly] {
+    background-color: beige;
 }
