--- a/02/02.css
+++ b/02/02.css
@@ -1,7 +1,7 @@
 * {
     margin: 0px;
     padding: 0px;
-    font-family: "Hi Melody", system-ui;
+    font-family: "Nanum Gothic Coding", system-ui;
 }
 
 body {
