--- a/11/11.css
+++ b/11/11.css
@@ -5,18 +5,44 @@
     justify-content: start;
 }
 
-.divDt,
+.menu {
+    display: flex;
+    background-color: aliceblue;
+    height: 50px;
+    width: 80%;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+}
+
+.menu>ul {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.divType>input {
+    margin-right: 5px;
+}
+
+.divType>label {
+    margin-right: 10px;
+}
+
+.divDt {
+    display: flex;
+    margin-right: auto;
+}
+
+.divDt>input {
+    width: 150px;
+}
+
 .mvul {
     display: flex;
     flex-direction: column;
     width: 80%;
-}
-
-.divDt {
-    background-color: aliceblue;
-    height: 50px;
-    align-items: center;
-    justify-content: center;
 }
 
 .mvul>li {
@@ -41,11 +67,12 @@
     border-radius: 5px;
 }
 
-.spMv{
+.spMv {
     padding-left: 5px;
 }
 
-.spInten, .spNew{
+.spInten,
+.spNew {
     margin-left: auto;
     padding-left: 10px;
 }
@@ -59,5 +86,5 @@
 }
 
 .spNew {
-    color : green
+    color: green
 }
