--- a/11/11.css
+++ b/11/11.css
@@ -9,17 +9,30 @@
     display: flex;
     background-color: aliceblue;
     height: 50px;
-    width: 80%;
+    width: 90%;
     align-items: center;
     justify-content: center;
     padding: 20px;
 }
 
-.menu>ul {
+.content {
     display: flex;
-    list-style: none;
-    padding: 0;
-    margin: 0;
+    width: 90%;
+    height: 70%;
+}
+
+.poster {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 5px;
+    width: 40%;
+}
+
+.poster>img {
+    width: 100%;
+    height: 100%;
 }
 
 .divType>input {
@@ -69,6 +82,7 @@
 
 .spMv {
     padding-left: 5px;
+    width: 80%;
 }
 
 .spInten,
